Fix wrapping text issue with line-height.

--- a/packages/terra-application-links/src/list/ApplicationList.scss
+++ b/packages/terra-application-links/src/list/ApplicationList.scss
@@ -4,9 +4,7 @@
     color: var(--terra-application-list-color, #1c1f21);
     display: block;
     font-size: var(--terra-application-list-font-size, 1.071rem);
-    line-height: var(--terra-application-list-line-height, 3.214rem);
-    padding-left: var(--terra-application-list-padding-left 1.2143rem);
-    padding-right: var(--terra-application-list-padding-right, 0.7143rem);
+    padding: var(--terra-application-list-padding, 0.8225rem 0.7143rem 0.8225rem 1.2143rem);
     text-decoration: none;
     
     &:focus,
@@ -27,7 +25,7 @@
     &[aria-current='true'] {
       background-image: var(--terra-application-list-selected-background-image, linear-gradient(-270deg, #fff, #e8e9ea));
       border-left: var(--terra-application-list-selected-border-left 0.5rem solid #007cc3);
-      padding-left: var(--terra-application-list-padding-left 0.7143rem);
+      padding: var(--terra-application-list-selected-padding, 0.8225rem 0.7143rem);
     }
   }
 }
