--- a/packages/terra-application-links/src/tabs/ApplicationTabs.scss
+++ b/packages/terra-application-links/src/tabs/ApplicationTabs.scss
@@ -134,7 +134,7 @@
   .collapsed-tab {
     color: var(--terra-application-tabs-collapsed-color, #1c1f21);
     display: block;
-    padding: var(--terra-application-tabs-collapsed-selected-padding, 1.214rem 1.071rem);
+    padding: var(--terra-application-tabs-collapsed-padding, 0.8225rem 1.071rem);
     text-align: left;
     text-decoration: none;
     text-overflow: unset;
